@@ -19,3 +19,4 @@
 - Layout: BasicStationPaint now uses the highlight-background color of TextField to paint. That should look better with different look and feels.
 - Bugfix: SplitDockStation's compare-method now ensures that the station does not overlap other, smaller stations
 - Layout: New "Eclipse Theme", written by Janni Kovacs
+- Bugfix: SecureScreenDockDialog throw NPE when closing
